translate Mh Nd Sc geometry model from analytic/sc.py into yoctoglrap/YOG.hh to act as intermediary between G4 structure and GLTF

--- a/yoctoglrap/CMakeLists.txt
+++ b/yoctoglrap/CMakeLists.txt
@@ -17,11 +17,13 @@ endif()
 set(SOURCES
     YOG_LOG.cc
 
+    YOG.cc
     YOGMaker.cc
     YOGGeometry.cc
 )
 
 SET(HEADERS
+    YOG.hh
     YOGMaker.hh
     YOGGeometry.hh
 
