start bringing together the pieces X4Solid X4Mesh YOG Sc Nd Mh TF into the X4PhysicalVolume TraverseVolumeTree following analytic/sc.py

--- a/ggeo/CMakeLists.txt
+++ b/ggeo/CMakeLists.txt
@@ -56,6 +56,7 @@ set(SOURCES
     GPmt.cc
 
     GMeshFixer.cc
+    GMeshMaker.cc
     GMesh.cc
     GNode.cc
     GTreePresent.cc
@@ -135,6 +136,7 @@ set(HEADERS
     GTreePresent.hh
     GBBoxMesh.hh
     GItemList.hh
+    GMeshMaker.hh
     GMeshFixer.hh
     GParts.hh
     GCSG.hh
@@ -149,7 +151,7 @@ set(HEADERS
 )
 
 
-add_library( ${name}  SHARED ${SOURCES})
+add_library( ${name}  SHARED ${SOURCES} ${HEADERS} )
 target_include_directories( ${name} PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>) 
 target_link_libraries( ${name} PUBLIC Opticks::OpticksCore )
 target_compile_definitions( ${name} PUBLIC OPTICKS_GGEO )
