--- a/sysrap/CMakeLists.txt
+++ b/sysrap/CMakeLists.txt
@@ -42,6 +42,7 @@ set(SOURCES
     SPairVec.cc
     md5.cc
     SPPM.cc
+    SBufferSpec.cc
 ) 
 
 set(HEADERS
@@ -77,6 +78,7 @@ set(HEADERS
     SArgs.hh
     S_freopen_redirect.hh
     SPPM.hh
+    SBufferSpec.hh
 )
 
 
