--- a/examples/UseBoost/CMakeLists.txt
+++ b/examples/UseBoost/CMakeLists.txt
@@ -3,13 +3,20 @@ set(name UseBoost)
 project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)
 
-set(Boost_DEBUG ON)
-set(Boost_NO_BOOST_CMAKE ON)
-find_package(Boost REQUIRED COMPONENTS filesystem)   
+#set(Boost_DEBUG ON)
+#set(Boost_NO_BOOST_CMAKE ON)
+#find_package(Boost REQUIRED COMPONENTS filesystem)   
+
+
+set(COMPONENTS system program_options filesystem regex )
+find_package(Boost REQUIRED COMPONENTS ${COMPONENTS} )
+set_target_properties(Boost::system  PROPERTIES INTERFACE_FIND_PACKAGE_NAME "Boost REQUIRED COMPONENTS ${COMPONENTS}")
+
+
 
 ## kludge that tees up arguments to find_dependency in generated export useboost-config.cmake 
 ## so downstream will automatically do the above find_package 
-set_target_properties(Boost::filesystem PROPERTIES INTERFACE_FIND_PACKAGE_NAME "Boost REQUIRED COMPONENTS filesystem")
+#set_target_properties(Boost::filesystem PROPERTIES INTERFACE_FIND_PACKAGE_NAME "Boost REQUIRED COMPONENTS filesystem")
 
 echo_pfx_vars(Boost "VERSION;DIR;FOUND;FILESYSTEM_FOUND;SYSTEM_FOUND;INCLUDE_DIRS;LIBRARY_DIRS;FIND_COMPONENTS")
 echo_target_std(Boost::filesystem)
@@ -18,7 +25,12 @@ set(SOURCES ${name}.cc )
 set(HEADERS ${name}.hh )
 
 add_library(${name} SHARED ${SOURCES})
-target_link_libraries(${name} PUBLIC Boost::filesystem)
+target_link_libraries(${name} PUBLIC 
+   Boost::system
+   Boost::program_options
+   Boost::filesystem
+   Boost::regex
+)
 
 bcm_deploy(TARGETS ${name} NAMESPACE Opticks:: SKIP_HEADER_INSTALL) 
 install(FILES ${HEADERS}  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
