adopt new classname GVolume(GNode), replacing the long misnamed GSolid(GNode), fix test fails from removal of auto-closure of proplibs

--- a/ggeo/tests/CMakeLists.txt
+++ b/ggeo/tests/CMakeLists.txt
@@ -28,7 +28,7 @@ set(TEST_SOURCES
 
     GMeshTest.cc
     GNodeTest.cc
-    GSolidTest.cc
+    GVolumeTest.cc
     GCIETest.cc
     GArrayTest.cc
     GTransformsTest.cc
