fixes to get the CX4GDMLTest traverse over DYB geometry to complete, with whacky transforms still

--- a/npy/tests/CMakeLists.txt
+++ b/npy/tests/CMakeLists.txt
@@ -67,6 +67,7 @@ NCylinderTest.cc
 NDiscTest.cc
 NConeTest.cc
 NConvexPolyhedronTest.cc
+NConvexPolyhedronSegmentTest.cc
 
 NNodeTest.cc
 NNodeDumpTest.cc
