--- a/extg4/tests/CMakeLists.txt
+++ b/extg4/tests/CMakeLists.txt
@@ -14,6 +14,7 @@ set(TEST_SOURCES
     X4MaterialTest.cc
     X4MaterialTableTest.cc
     X4PhysicalVolumeTest.cc
+    X4PhysicalVolume2Test.cc
     X4Transform3DTest.cc
 
 
