attempt to visualize the X4 directly converted GGeo using OpticksHub/OpticksViz machinery, in OKX4Test

--- a/okg4/tests/CMakeLists.txt
+++ b/okg4/tests/CMakeLists.txt
@@ -3,21 +3,24 @@ set(name OKG4Test)
 project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)
 
-set(TESTS
+set(TEST_SOURCES
     OKG4Test.cc
 )
 
-foreach(SRC ${TESTS})
+set(_TEST_SOURCES
+    OKX4Test.cc
+)
+
+foreach(SRC ${TEST_SOURCES} ${_TEST_SOURCES})
 
     get_filename_component(TGT ${SRC} NAME_WE)
     add_executable(${TGT} ${SRC})
     target_link_libraries(${TGT} OKG4)
     install(TARGETS ${TGT} DESTINATION lib)
 
-    add_test(${name}.${TGT} ${TGT})
-    #add_dependencies(check ${TGT})
-
-#    add_test(${name}.${TGT}_g4gun ${TGT} --g4gun)   ## add test with argument : --g4gun
+    if(${SRC} IN_LIST TEST_SOURCES)   # CMake 3.3
+        add_test(${name}.${TGT} ${TGT})
+    endif()
 
 endforeach()
 
