--- a/npy/tests/CMakeLists.txt
+++ b/npy/tests/CMakeLists.txt
@@ -158,6 +158,7 @@ NTreeBuilderTest.cc
 NTreePositiveTest.cc
 NTreeBalanceTest.cc
 NTreeAnalyseTest.cc
+NGPUTest.cc
 
 NNodeCollectorTest.cc
 NGridTest.cc
