CentOS7 Linux port ongoing, up to symbol visibility problem from ImGui

--- a/cudarap/CMakeLists.txt
+++ b/cudarap/CMakeLists.txt
@@ -3,7 +3,13 @@ set(name CUDARap)
 project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)      
 
+set(OKConf_VERBOSE ON)
+message(STATUS "${name}.finding OKConf")
 find_package(OKConf REQUIRED CONFIG)   
+message(STATUS "${name}.COMPUTE_CAPABILITY ${COMPUTE_CAPABILITY} ")
+
+
+set(FLAGS_VERBOSE ON)
 include(OpticksCompilationFlags)     ## repeating this here as nvcc flags require COMPUTE_CAPABILIY from OKConf     
 
 find_package(SysRap REQUIRED CONFIG)
@@ -11,7 +17,8 @@ find_package(OpticksCUDA REQUIRED MODULE)
 
 ## NB **NO BOOST** or pkgs with Boost in its ancestry : as nvcc barfs on it
 
-set(CUDARap_VERBOSE OFF)
+#set(CUDARap_VERBOSE OFF)
+set(CUDARap_VERBOSE ON)
 if(CUDARap_VERBOSE)
    message(STATUS "${name}.CUDA_NVCC_FLAGS : ${CUDA_NVCC_FLAGS} ")
 endif()
