first cut as saving at NCSG level, aiming to treat NCSG converted from generated g4 geometry like serialized python CSG

--- a/npy/tests/CMakeLists.txt
+++ b/npy/tests/CMakeLists.txt
@@ -100,6 +100,7 @@ DummyPhotonsNPYTest.cc
 NMarchingCubesNPYTest.cc
 NCSGTest.cc
 NCSGLoadTest.cc
+NCSGSaveTest.cc
 NCSGScanTest.cc
 NCSGListTest.cc
 NEmitConfigTest.cc
