--- a/extg4/tests/CMakeLists.txt
+++ b/extg4/tests/CMakeLists.txt
@@ -8,6 +8,7 @@ set(TEST_SOURCES
 
     X4EntityTest.cc
     X4SolidTest.cc
+    X4SolidLoadTest.cc
     X4MeshTest.cc
     X4SolidListTest.cc
     X4PhysicsVectorTest.cc
