factor off buffer mechanics into NPYList and metadata handling into NPYMeta leaving NCSGData much simpler, and yielding reusable classes

--- a/npy/CMakeLists.txt
+++ b/npy/CMakeLists.txt
@@ -37,6 +37,8 @@ set(SOURCES
     NPYSpecList.cpp
     NSlice.cpp
     NPY.cpp
+    NPYList.cpp
+    NPYMeta.cpp
     NLoad.cpp
 
     GLMPrint.cpp
@@ -224,6 +226,8 @@ GLMFormat.hpp
 NBufferSpec.hpp
 NPYBase.hpp
 NPY.hpp
+NPYList.hpp
+NPYMeta.hpp
 NLoad.hpp
 ViewNPY.hpp
 NPYSpec.hpp
