debugging surfaces/materials/boundaries in the direct route : missing cathode EFFICIENCY caused by lack of detect to EFFICIENCY mapping for materials not surfaces

--- a/ggeo/CMakeLists.txt
+++ b/ggeo/CMakeLists.txt
@@ -65,6 +65,7 @@ set(SOURCES
     GVolumeList.cc
     GGeoLib.cc
     GGeoCfg.cc
+    GGeoSensor.cc
     GGeoTest.cc
     GMaker.cc
     GBBoxMesh.cc
@@ -96,6 +97,7 @@ set(HEADERS
     GGeoBase.hh
     GGeo.hh
     GGeoCfg.hh
+    GGeoSensor.hh
     GMaterial.hh
     GSource.hh
     GMesh.hh
