more flexible logging, move cathode from GGeo to GMaterialLib for use from direct route

--- a/sysrap/tests/CMakeLists.txt
+++ b/sysrap/tests/CMakeLists.txt
@@ -28,6 +28,10 @@ set(TEST_SOURCES
 
    SYSRAP_OPTICKS_LOG_Test.cc
 
+   OPTICKS_LOG_Test.cc
+   pLOG_MACRO_Test.cc
+    
+
    OpticksCSGTest.cc
    hash_define_without_value.cc
    SDirectTest.cc 
