material order now matching, using pref order sort for old route and CGDMLDetector::sortMaterials fixup prior to direct route

--- a/cfg4/CMakeLists.txt
+++ b/cfg4/CMakeLists.txt
@@ -45,6 +45,7 @@ set(SOURCES
     CRec.cc
     CTrack.cc
     CPropLib.cc
+    CMaterialSort.cc
     CMaterialLib.cc
     CMath.cc
     CSolid.cc
@@ -152,6 +153,7 @@ set(HEADERS
     CTrack.hh
 
     CPropLib.hh
+    CMaterialSort.hh
     CMaterialLib.hh
 
     CMath.hh
