--- a/examples/UseCUDARap/CMakeLists.txt
+++ b/examples/UseCUDARap/CMakeLists.txt
@@ -3,15 +3,10 @@ set(name UseCUDARap)
 project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)
 
-#set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
-
 find_package(CUDARap REQUIRED CONFIG)
-
-echo_target_std(Opticks::CUDARap)
+#echo_target_std(Opticks::CUDARap)
 
 add_executable( ${name} ${name}.cc )
-
 target_link_libraries(${name} PUBLIC Opticks::CUDARap )
-
 install(TARGETS ${name} DESTINATION lib)
 
