--- a/okop/tests/CMakeLists.txt
+++ b/okop/tests/CMakeLists.txt
@@ -8,7 +8,7 @@ set(TEST_SOURCES
     OpSeederTest.cc
     dirtyBufferTest
     compactionTest
-    OpTest.cc
+    OpSnapTest.cc
 )
 
 foreach(SRC ${TEST_SOURCES})
