--- a/examples/Geant4/GDMLMangledLVNames/CMakeLists.txt
+++ b/examples/Geant4/GDMLMangledLVNames/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
-set(name CerenkovMinimal)
+set(name GDMLMangledLVNames)
 project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)
 
@@ -8,32 +8,10 @@ find_package( G4OK CONFIG REQUIRED )
 
 set(SOURCES
     DetectorConstruction.cc
-    PhysicsList.cc
-    L4Cerenkov.cc
-    PrimaryGeneratorAction.cc
-    SteppingAction.cc
-    TrackingAction.cc
-    EventAction.cc
-    RunAction.cc
-    Ctx.cc
-    G4.cc
-    SensitiveDetector.cc
-    OpHit.cc
 )
 
 set(HEADERS
     DetectorConstruction.hh
-    PhysicsList.hh
-    L4Cerenkov.hh
-    PrimaryGeneratorAction.hh
-    SteppingAction.hh
-    TrackingAction.hh
-    EventAction.hh
-    RunAction.hh
-    Ctx.hh
-    G4.hh
-    SensitiveDetector.hh
-    OpHit.hh
 )
 
 add_executable(${name} ${name}.cc ${SOURCES} ${HEADERS})
